--- a/src/swiss_alignment/configs/model/apertus-70b.yaml
+++ b/src/swiss_alignment/configs/model/apertus-70b.yaml
@@ -12,6 +12,6 @@ tokenizer_args:
   chat_template_name: tulu
   trust_remote_code: true
   padding_side: right
-  add_bos: true # 1: <s>
+  add_bos_to_chat_template: true # 1: <s>
   model_pad_token_id: 10  # <pad>
   model_eos_token_id: null # keep default. (2: </s>)
