--- a/src/swiss_alignment/configs/model/meta-llama-3-1-8b.yaml
+++ b/src/swiss_alignment/configs/model/meta-llama-3-1-8b.yaml
@@ -12,6 +12,6 @@ tokenizer_args:
   chat_template_name: tulu
   trust_remote_code: true
   padding_side: right
-  add_bos: false
+  add_bos_to_chat_template: false
   model_pad_token_id: 128004  # <|finetune_right_pad_id|>
   model_eos_token_id: null # keep default. (128001)
