--- a/src/swiss_alignment/configs/model/olmo2-7b.yaml
+++ b/src/swiss_alignment/configs/model/olmo2-7b.yaml
@@ -12,6 +12,6 @@ tokenizer_args:
   chat_template_name: tulu
   trust_remote_code: true
   padding_side: right
-  add_bos: true
+  add_bos_to_chat_template: true
   model_pad_token_id: 100277  # <|pad|>
   model_eos_token_id: null # keep default. (100257)
