Updating to transformers v4.53.1+swissai (#15)
* adding chat template and testing llama 3.1 8b

* split dataset into train and eval sets

* update tokenization filename

* minor changes to tokenizer

* starting implementation for plw trainer

* fixing data preprocessing for plw

* update comment

* applying pre-commit hook

* finish plw trainer

* setting up plw script

* computing generation ratio

* Chat template (#4)

* adding chat template and testing llama 3.1 8b

* split dataset into train and eval sets

* update tokenization filename

* minor changes to tokenizer

* applying pre-commit hook

* remove/improved comments + improved tockenizer config

* adding comments to chat templates

* update the examples of chat templates

* fixing minor changes with merged code

* remove comment

* Update reproducibility-scripts/trl-plw/generate_submit.py

* cleaning plw

* cleaning plw

* adding reproducibility for tulu 3 sft dataset

* fixing data readme

* fixing data readme

* restructuring the plw trainer

* fixing loss for plw trainer

* modifying compute loss in plw trainer

* comment to change sft config

* clearning sft script

* rename config util

* Mount project root (#6)

* mount project root

* fix file path

* mounting smoalla storage + improving command scripts

* adding chat template and testing llama 3.1 8b

* minor changes to tokenizer

* tulu 3 sft script

* cleaning branch

* updating script commands

* cleaning ds zero 1 config

* clean magpieair ymal

* fixing plw trainer

* remove sft trainer

* cleaned plw trainer

* modifying dataset transformations

* fixing issue with tokenization

* adding length normalized plw trainer

* adding chat template and testing llama 3.1 8b

* clean repo

* restoring original files

* restoring original files

* clariden getting started guide from dpr project

* adding swiss-ai transformers library

* Adding Apertu3 8B config

* cleaning dataset utils

* updating clipping config

* adding dataset mixers

* mounting smo

--- a/src/swiss_alignment/configs/model/apertus-70b.yaml
+++ b/src/swiss_alignment/configs/model/apertus-70b.yaml
@@ -2,16 +2,16 @@
 
 model_args:
   torch_dtype: bfloat16
-  model_name_or_path: /capstor/store/cscs/swissai/a06/hf_checkpoints/Apertus3-8B_iter_900000
+  model_name_or_path: /capstor/store/cscs/swissai/infra01/pretrain-checkpoints/apertus/Apertus70B-tokens10T-it858000
   attn_implementation: flash_attention_2
   trust_remote_code: true
   use_peft: false
 
 tokenizer_args:
-  tokenizer_name_or_path: /capstor/store/cscs/swissai/a06/hf_checkpoints/Apertus3-8B_iter_900000
+  tokenizer_name_or_path: /capstor/store/cscs/swissai/infra01/pretrain-checkpoints/apertus/Apertus70B-tokens10T-it858000
   chat_template_name: tulu
   trust_remote_code: true
   padding_side: right
-  add_bos: false
+  add_bos_to_chat_template: true # 1: <s>
   model_pad_token_id: 10  # <pad>
   model_eos_token_id: null # keep default. (2: </s>)
