--- a/installation/docker-arm64-cuda/compose-base.yaml
+++ b/installation/docker-arm64-cuda/compose-base.yaml
@@ -3,7 +3,7 @@ services:
     build:
       args:
         BASE_IMAGE: docker.io/skandermoalla/vllm:v0.7.3-56982c83-arm64-cuda-gh200
-        # vLLM custom-build image from https://github.com/skandermoalla/vllm-build
+        # vLLM custom-build image from https://github.com/skandermoalla/vllm-build/blob/custom-v0.7.3/Dockerfile
         # Bsed on the nvcr.io/nvidia/pytorch:24.10-py3
         # With Pytorch 2.5.0a0+e000cf0ad9, NVIDIA CUDA 12.6.2, NVIDIA NCCL 2.22.3, Python 3.10.
         # https://docs.nvidia.com/deeplearning/frameworks/pytorch-release-notes/rel-24-10.html
