--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,10 +1,3 @@
-# Pre-commit sets git hooks for identifying simple issues when committing code.
-# See https://pre-commit.com for more information
-# See https://pre-commit.com/hooks.html for more hooks
-
-default_language_version:
-  python: python3.10
-
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.5.0
@@ -13,11 +6,12 @@ repos:
       - id: check-symlinks
       - id: destroyed-symlinks
       - id: trailing-whitespace
+        args:
+          - --markdown-linebreak-ext=md,markdown,mdx
       - id: end-of-file-fixer
       - id: mixed-line-ending
       - id: check-yaml
       - id: check-toml
-      - id: check-added-large-files
       - id: check-merge-conflict
       - id: check-shebang-scripts-are-executable
       - id: detect-private-key
@@ -32,9 +26,9 @@ repos:
     rev: 5.12.0
     hooks:
       - id: isort
-        args: [ "--profile", "black", "--filter-files" ]
+        args: ["--profile", "black", "--filter-files"]
   - repo: https://github.com/codespell-project/codespell
     rev: v2.2.6
     hooks:
       - id: codespell
-        args: [ "--skip=*.ipynb" ]
+        args: ["--skip=*.ipynb"]
