--- a/installation/docker-arm64-cuda/build-vllm/Dockerfile-base-vllm
+++ b/installation/docker-arm64-cuda/build-vllm/Dockerfile-base-vllm
@@ -51,7 +51,7 @@ RUN pip list --format=freeze | grep -E 'transformers' >> /workspace/frozen.txt &
 #    --constraint /workspace/frozen.txt
 
 RUN pip install -v --no-cache-dir --no-build-isolation -U \
-    git+https://github.com/facebookresearch/xformers.git@v0.0.30#egg=xformers \
+    git+https://github.com/facebookresearch/xformers.git@v0.0.29.post3#egg=xformers \
     --constraint /workspace/frozen.txt
 
 RUN pip install -v --no-cache-dir --no-build-isolation -U \
