--- a/installation/docker-arm64-cuda/compose-base.yaml
+++ b/installation/docker-arm64-cuda/compose-base.yaml
@@ -2,7 +2,7 @@ services:
   build-args:
     build:
       args:
-        BASE_IMAGE: localhost/vllm:v0.9.0.1-apertus-vllm
+        BASE_IMAGE: localhost/vllm:v0.9.0.1-base-vllm
         # vLLM custom-build image from https://github.com/skandermoalla/vllm-build/blob/custom-v0.7.3/Dockerfile
         # Bsed on the nvcr.io/nvidia/pytorch:24.10-py3
         # With Pytorch 2.5.0a0+e000cf0ad9, NVIDIA CUDA 12.6.2, NVIDIA NCCL 2.22.3, Python 3.10.
