--- a/src/swiss_alignment/configs/trl-plw.yaml
+++ b/src/swiss_alignment/configs/trl-plw.yaml
@@ -29,12 +29,6 @@ irl_args:
   lambda_td: 0.5
   gamma: 1.0
 
-ademamix_args:
-  beta3: 0.9999
-  beta3_warmup: 13446
-  alpha: 8.0
-  alpha_warmup: 13446
-
 training_args:
   bf16: true
   max_seq_length: 4096
@@ -42,6 +36,8 @@ training_args:
   learning_rate: 5.0e-06
   lr_scheduler_type: linear
   warmup_ratio: 0.03
+  optim: ademamix
+  optim_args: "beta3=0.9999,t_beta3=13446,alpha=8.0,t_alpha=13446"
   adam_beta1: 0.9
   adam_beta2: 0.999
   adam_epsilon: 1e-8
