--- a/installation/docker-arm64-cuda/requirements-initial.txt
+++ b/installation/docker-arm64-cuda/requirements-initial.txt
@@ -11,6 +11,7 @@ accelerate==1.6.0
 deepspeed==0.16.9
 datasets==3.5.0
 peft==0.15.1
+bitsandbytes==0.46.1
 trl==0.16.0
 # Model Merging
 # swiss-ai fork of mergekit
