--- a/src/swiss_alignment/configs/accelerate/ddp.yaml
+++ b/src/swiss_alignment/configs/accelerate/ddp.yaml
@@ -4,13 +4,13 @@ distributed_type: MULTI_GPU
 downcast_bf16: 'no'
 enable_cpu_affinity: false
 gpu_ids: all
-machine_rank: 0             # Edit at runtime with SLURM
-main_process_ip: nid006405  # Edit at runtime with SLURM
+machine_rank: 0                             # Edit at runtime with SLURM
+main_process_ip: nidXXXXXX                  # Edit at runtime
 main_process_port: 29400
 main_training_function: main
 mixed_precision: bf16
-num_machines: 1             # Edit at runtime with SLURM
-num_processes: 1          # Edit at runtime with SLURM
+num_machines: 1                            # Edit at runtime
+num_processes: 4                           # Edit at runtime
 rdzv_backend: static
 same_network: true
 tpu_env: []
