--- a/src/swiss_alignment/configs/accelerate/ds-zero3.yaml
+++ b/src/swiss_alignment/configs/accelerate/ds-zero3.yaml
@@ -1,23 +1,23 @@
 compute_environment: LOCAL_MACHINE
 debug: false
+distributed_type: DEEPSPEED
 deepspeed_config:
   deepspeed_multinode_launcher: standard
+  zero_stage: 3
   offload_optimizer_device: none
   offload_param_device: none
   zero3_save_16bit_model: true
   zero3_init_flag: true
-  zero_stage: 3
-distributed_type: DEEPSPEED
 downcast_bf16: 'no'
 enable_cpu_affinity: false
 gpu_ids: all
-machine_rank: 0
-main_process_ip: nid                        # Edit at runtime
+machine_rank: 0                             # Edit at runtime with SLURM
+main_process_ip: nidXXXXXX                  # Edit at runtime
 main_process_port: 29400
 main_training_function: main
 mixed_precision: bf16
 num_machines: 1                            # Edit at runtime
-num_processes: 4                           # Edit at runtime
+num_processes: 1                           # Edit at runtime
 rdzv_backend: static
 same_network: true
 tpu_env: []
