adding updated sft config

--- a/src/swiss_alignment/configs/train-sft.yaml
+++ b/src/swiss_alignment/configs/train-sft.yaml
@@ -39,9 +39,6 @@ training_args:
   warmup_ratio: 0.03
   optim: ademamix
   optim_args: "beta3=0.9999,alpha=8.0" # t_beta3 and t_alpha are automatically calculated in train_sft.py
-  adam_beta1: 0.9
-  adam_beta2: 0.999
-  adam_epsilon: 1e-8
   weight_decay: 0.0
   num_train_epochs: 2
   packing: false
@@ -56,8 +53,8 @@ training_args:
   logging_first_step: true
   logging_steps: 1
   per_device_eval_batch_size: 2
-  eval_strategy: steps # use "no" for no evaluation
-  eval_steps: 100
+  eval_strategy: no
+  eval_steps: null
   eval_on_start: false
   save_strategy: epoch
   save_steps: 1000
