--- a/src/swiss_alignment/configs/train-sft.yaml
+++ b/src/swiss_alignment/configs/train-sft.yaml
@@ -56,7 +56,7 @@ training_args:
   eval_strategy: no
   eval_steps: null
   eval_on_start: false
-  save_strategy: epoch
+  save_strategy: steps
   save_steps: 1000
   report_to: wandb
   seed: ${seed}
