--- a/src/swiss_alignment/configs/merge-partitions.yaml
+++ b/src/swiss_alignment/configs/merge-partitions.yaml
@@ -14,8 +14,8 @@ defaults:
 
 dataset_id: null
 dataset_type: null
-dataset_path: ${artifacts_dir}/shared/datasets/alignment-pipeline/${dataset_type}/${dataset_id}
-save_path: ${artifacts_dir}/shared/datasets/alignment-pipeline/${dataset_type}/merged/${dataset_id}
+dataset_path: ${artifacts_dir}/${artifacts_subdir}/datasets/alignment-pipeline/${dataset_type}/${dataset_id}
+save_path: ${artifacts_dir}/${artifacts_subdir}/datasets/alignment-pipeline/${dataset_type}/merged/${dataset_id}
 is_partitioned: True
 is_subpartitioned: True
 seed: 42
