--- a/src/swiss_alignment/configs/train-sft.yaml
+++ b/src/swiss_alignment/configs/train-sft.yaml
@@ -61,7 +61,7 @@ training_args:
   report_to: wandb
   seed: ${seed}
   dataset_num_proc: 32
-  dataloader_num_workers: 8
+  dataloader_num_workers: ${training_args.per_device_train_batch_size}
 
 seed: 42
 
