--- a/src/swiss_alignment/configs/train-sft.yaml
+++ b/src/swiss_alignment/configs/train-sft.yaml
@@ -59,6 +59,7 @@ training_args:
   eval_on_start: false
   save_strategy: steps
   save_steps: 1000
+  save_total_limit: 3
   report_to: wandb
   seed: ${seed}
   dataset_num_proc: 32
