--- a/src/swiss_alignment/configs/setup.yaml
+++ b/src/swiss_alignment/configs/setup.yaml
@@ -13,8 +13,6 @@ cuda_strong_deterministic: false
 # The root data and output directories to be used in experiments.
 artifacts_dir: ${hydra:runtime.cwd}/artifacts
 artifacts_subdir: private  # Can be private, shared, ...
-input_artifacts_subdir: ${artifacts_subdir}
-output_artifacts_subdir: ${artifacts_subdir}
 
 # Outputs are saved in artifacts/${artifacts_subdir}/...
 # so you can store them in different physical locations if you want
@@ -32,7 +30,7 @@ job_subdir: dev
 hydra:
   run:
     # Finally, this is where the outputs of an individual run will be stored.
-    dir: ${artifacts_dir}/${output_artifacts_subdir}/outputs/${hydra.job.name}/${job_subdir}/runs/${now:%Y-%m-%d--%H-%M-%S-%f}
+    dir: ${artifacts_dir}/${artifacts_subdir}/outputs/${hydra.job.name}/${job_subdir}/runs/${now:%Y-%m-%d--%H-%M-%S-%f}
   job:
     chdir: true
   verbose: false  # Set to true for logging at debug level.
@@ -52,21 +50,23 @@ wandb:
 
 run_dir: ${hydra:run.dir}
 resuming_dir: null
+resuming_hash: null
 
 resuming:
   resume: false
   use_commit: false
   wandb_cache_bust: 0 # Limitation of wandb. Cannot create runs with the same ID if deleted previously.
                       # Use this to refresh the id of the run and make it a "new" run.
-  exclude_keys:
+  ignore_keys:
+    # Keys in the config to ignore when checking that the run is resuming with the same config.
     # Can be a deep key e.g. model.optimizer.lr
     # To resume if stared in a different location.
     - run_dir
-    - artifacts_subdir
-    - input_artifacts_subdir
-    - output_artifacts_subdir
-    - job_subdir
     - resuming_dir
+    - resuming_hash
+    - artifacts_dir
+    - artifacts_subdir
+    - job_subdir
     - wandb
     # To be able to add keys on the fly and force resume.
-    - resuming.exclude_keys
+    - resuming.ignore_keys
