--- a/src/swiss_alignment/configs/train-preference.yaml
+++ b/src/swiss_alignment/configs/train-preference.yaml
@@ -1,17 +1,24 @@
+# An example config file for an experiment.
+# Keep this, it's used as an example to run the code after a user installs the project.
+
 defaults:
+  # Common setup.
   - setup
+  # This file.
   - _self_
   # Model (from the configs/model/ directory).
-  - model: apertus-8b
+  - model: llama
   # Dataset (from the configs/dataset/ directory).
-  - dataset: tulu-3-sft-mixture-split
-  # Optional preset for training parameters.
-  - optional preset: none
+  - dataset: magpieair-armorm
 
 ######################################################################
 
+# model_args from the model config file
+# reward_model_args from the reward model config file
+# dataset args from the dataset config file
+
 wandb:
-  project: swiss-alignment-sft
+  project: swiss-alignment-alignment
 
 dataset_args:
   debug_oom: false # Reorder the dataset with largest batch first to test OOM
@@ -24,34 +31,29 @@ script_args:
   dataset_name: ${dataset_args.dataset_name}
   dataset_train_split: ${dataset_args.train_split.name}
   dataset_test_split: ${dataset_args.eval_split.name}
-
-accelerate_config: "src/swiss_alignment/configs/accelerate/ds-zero1.yaml"
-trainer: plw # can only take values: sft, plw, ln-plw, irl
-plw_args:
-  prompt_loss_weight: 0.0
-  sequence_level_loss: false
-
 training_args:
   bf16: true
-  max_seq_length: 4096
-  max_grad_norm: 1
-  learning_rate: 5.0e-06
+  max_prompt_length: 4096
+  max_completion_length: 4096
+  max_length: 4096
+  learning_rate: 2.0e-7
+  max_grad_norm: 1e5  # Disable gradient clipping but still log grad norm. (-1 doesn't log).
   lr_scheduler_type: linear
-  warmup_ratio: 0.03
-  warmup_steps: 0
-  optim: adamw_torch
-  optim_args: null
+  warmup_ratio: 0.1
+  optim: ademamix
+  optim_args: "beta3=0.9999,alpha=8.0" # t_beta3 and t_alpha are automatically calculated in train_sft.py
   weight_decay: 0.0
   num_train_epochs: 1
-  packing: false
+  num_ref_rewards: 10
+  loss_type: dpr
+  beta: 0.003
+  precompute_ref_log_probs: false
   dataloader_drop_last: true
-  remove_unused_columns: false # required for custom data collator
-  per_device_train_batch_size: 2 # note, this is set up for 4 GPUs
-  gradient_accumulation_steps: 4 # effective batch size 128 with 4 nodes
+  per_device_train_batch_size: 1
+  gradient_accumulation_steps: 1
   gradient_checkpointing: true
   gradient_checkpointing_kwargs:
     use_reentrant: false # https://pytorch.org/docs/stable/checkpoint.html, https://github.com/huggingface/trl/issues/1348
-  average_tokens_across_devices: true # More accurate loss.
   logging_first_step: true
   logging_steps: 1
   per_device_eval_batch_size: 2
@@ -60,13 +62,13 @@ training_args:
   eval_on_start: false
   save_strategy: steps
   save_steps: 1000
-  save_total_limit: 3
+  save_only_model: false
   report_to: wandb
   seed: ${seed}
   dataset_num_proc: 32
   dataloader_num_workers: ${training_args.per_device_train_batch_size}
 
-seed: 42
+seed: 27
 
 resuming:
   resume: false
@@ -80,6 +82,3 @@ resuming:
     - wandb
     - resuming.ignore_keys
     - training_args.logging_dir
-    - training_args.dataloader_num_workers
-    - training_args.dataset_num_proc
-    - training_args.save_steps
