--- a/src/swiss_alignment/configs/train-preference.yaml
+++ b/src/swiss_alignment/configs/train-preference.yaml
@@ -7,9 +7,9 @@ defaults:
   # This file.
   - _self_
   # Model (from the configs/model/ directory).
-  - model: llama
+  - model: apertus-8b
   # Dataset (from the configs/dataset/ directory).
-  - dataset: magpieair-armorm
+  - dataset: olmo2-32b-preference-skywork-llama3-8b-olmo2-32b-sft
 
 ######################################################################
 
@@ -31,6 +31,7 @@ script_args:
   dataset_name: ${dataset_args.dataset_name}
   dataset_train_split: ${dataset_args.train_split.name}
   dataset_test_split: ${dataset_args.eval_split.name}
+
 training_args:
   bf16: true
   max_prompt_length: 4096
@@ -40,12 +41,12 @@ training_args:
   max_grad_norm: 1e5  # Disable gradient clipping but still log grad norm. (-1 doesn't log).
   lr_scheduler_type: linear
   warmup_ratio: 0.1
-  optim: ademamix
-  optim_args: "beta3=0.9999,alpha=8.0" # t_beta3 and t_alpha are automatically calculated in train_sft.py
+  optim: adamw_torch
+  optim_args: null
   weight_decay: 0.0
   num_train_epochs: 1
   num_ref_rewards: 10
-  loss_type: dpr
+  loss_type: qrpo
   beta: 0.003
   precompute_ref_log_probs: false
   dataloader_drop_last: true
@@ -62,13 +63,13 @@ training_args:
   eval_on_start: false
   save_strategy: steps
   save_steps: 1000
-  save_only_model: false
+  save_total_limit: 3
   report_to: wandb
   seed: ${seed}
   dataset_num_proc: 32
   dataloader_num_workers: ${training_args.per_device_train_batch_size}
 
-seed: 27
+seed: 42
 
 resuming:
   resume: false
@@ -82,3 +83,6 @@ resuming:
     - wandb
     - resuming.ignore_keys
     - training_args.logging_dir
+    - training_args.dataloader_num_workers
+    - training_args.dataset_num_proc
+    - training_args.save_steps
