--- a/src/swiss_alignment/configs/model/apertus-8b.yaml
+++ b/src/swiss_alignment/configs/model/apertus-8b.yaml
@@ -2,13 +2,13 @@
 
 model_args:
   torch_dtype: bfloat16
-  model_name_or_path: /capstor/store/cscs/swissai/infra01/pretrain-checkpoints/apertus/Apertus8B-tokens7.2T-it1728000-hotfix
+  model_name_or_path: /capstor/store/cscs/swissai/infra01/pretrain-checkpoints/apertus/Apertus8B-tokens10.2T-it2059810-newcooldown
   attn_implementation: flash_attention_2
   trust_remote_code: true
   use_peft: false
 
 tokenizer_args:
-  tokenizer_name_or_path: /capstor/store/cscs/swissai/infra01/pretrain-checkpoints/apertus/Apertus8B-tokens7.2T-it1728000-hotfix
+  tokenizer_name_or_path: /capstor/store/cscs/swissai/infra01/pretrain-checkpoints/apertus/Apertus8B-tokens10.2T-it2059810-newcooldown
   chat_template_name: tulu
   trust_remote_code: true
   padding_side: right
