--- a/src/swiss_alignment/configs/dataset/tulu3-sft-mixture-original-ln.yaml
+++ b/src/swiss_alignment/configs/dataset/tulu3-sft-mixture-original-ln.yaml
@@ -5,7 +5,7 @@ dataset_name: tulu3-sft-mixture-original-ln
 dataset_args:
   dataset_name: /capstor/store/cscs/swissai/infra01/posttrain_data/02_standardised_newformat_linearised/tulu-3-sft-mixture-original
   train_split: # Only required for DatasetDict objects
-    name: null
+    name: train
   eval_split:
     name: null
 
