--- a/installation/docker-arm64-cuda/build-vllm/Dockerfile-apertus-vllm
+++ b/installation/docker-arm64-cuda/build-vllm/Dockerfile-apertus-vllm
@@ -30,7 +30,6 @@ RUN REGEX=$(paste -sd'|' /workspace/constraints-packages.txt | sed 's/^/^(/;s/$/
 RUN echo "=== frozen.txt ===" && cat /workspace/frozen.txt && echo "=== end frozen.txt ==="
 
 COPY requirements-setup.txt /workspace/requirements-setup.txt
-COPY requirements-packages.txt /workspace/requirements-packages.txt
 
 RUN pip install --no-cache-dir --no-build-isolation -U \
     -r /workspace/requirements-setup.txt
@@ -46,10 +45,6 @@ RUN pip install -v --no-cache-dir --no-build-isolation -U \
 RUN pip list --format=freeze | grep -E 'transformers' >> /workspace/frozen.txt && \
     echo "=== updated frozen.txt ===" && cat /workspace/frozen.txt && echo "=== end updated frozen.txt ==="
 
-#RUN pip install --no-cache-dir --no-build-isolation -U \
-#    -r /workspace/requirements-packages.txt \
-#    --constraint /workspace/frozen.txt
-
 RUN pip install -v --no-cache-dir --no-build-isolation -U \
     git+https://github.com/facebookresearch/xformers.git@v0.0.29.post3#egg=xformers \
     --constraint /workspace/frozen.txt
@@ -63,4 +58,4 @@ RUN git clone https://github.com/swiss-ai/vllm.git /workspace/vllm && \
     git checkout v0.9.0.1+swissai && \
     python use_existing_torch.py && \
     pip install -v --no-cache-dir --no-build-isolation --constraint /workspace/frozen.txt -r requirements/build.txt && \
-    pip install -v --no-cache-dir --no-build-isolation --constraint /workspace/frozen.txt -e .
+    pip install -v --no-cache-dir --no-build-isolation --constraint /workspace/frozen.txt .
