--- a/src/swiss_alignment/configs/generate-ref-completions.yaml
+++ b/src/swiss_alignment/configs/generate-ref-completions.yaml
@@ -23,8 +23,9 @@ partition_end_idx: 0
 subpartition_number: 0 # (gpu level) subsection in the partition to process
 n_completions: 10 # Number of completions to generate for each prompt.
 max_new_tokens: 4096 # Maximum number of tokens to generate for each completion.
+max_prompt_length: 4096 # Maximum length of the (input prompt + generation prompt + 1). Prompts longer than this will be filtered out.
 save_interval: 256 # Saving every save_interval prompt (should be multiple of batch_size)
-
+num_gpus_per_node: 4
 
 job_subdir_prefix: null
 job_subdir: ${job_subdir_prefix}/${subpartition_number}
