--- a/src/swiss_alignment/configs/model/llama3-1b-instruct.yaml
+++ b/src/swiss_alignment/configs/model/llama3-1b-instruct.yaml
@@ -14,6 +14,7 @@ tokenizer_args:
 
 model_vllm_config:
   model_impl: vllm
+  tensor_parallel_size: 1
 
 model_generation_config:
   temperature: 1.0
