--- a/src/swiss_alignment/configs/reward_model/armorm-llama3-8b.yaml
+++ b/src/swiss_alignment/configs/reward_model/armorm-llama3-8b.yaml
@@ -6,3 +6,6 @@ reward_model_args:
   pretrained_model_name_or_path: ${artifacts_dir}/shared/reward-models/armorm-llama3-8b
   attn_implementation: flash_attention_2
   trust_remote_code: true
+
+reward_model_distributed_config:
+  tensor_parallel_size: 1
