--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,6 +11,7 @@ repos:
     rev: v4.5.0
     hooks:
       - id: check-added-large-files
+        args: [--maxkb=1224]
       - id: check-symlinks
       - id: destroyed-symlinks
       - id: trailing-whitespace
