--- a/src/swiss_alignment/configs/train-preference.yaml
+++ b/src/swiss_alignment/configs/train-preference.yaml
@@ -34,6 +34,11 @@ script_args:
 
 accelerate_config: "src/swiss_alignment/configs/accelerate/ds-zero1.yaml"
 
+# These args are not captured by the TRL config or are computed at runtime.
+# We put them here to make the hash of the config depend on them.
+global_batch_size: 32
+num_nodes: 1
+
 training_args:
   bf16: true
   max_prompt_length: 4096
@@ -47,13 +52,13 @@ training_args:
   optim_args: null
   weight_decay: 0.0
   num_train_epochs: 1
-  load_ref_model: true
   num_ref_rewards: 10
   loss_type: qrpo
   beta: 0.1
   normalize_beta_by_length: false
   normalize_loss_by_length: false
   precompute_ref_log_probs: false
+  ref_logprobs_from_dataset: false
   dataloader_drop_last: true
   per_device_train_batch_size: 1
   gradient_accumulation_steps: 1
