--- a/src/swiss_alignment/configs/dataset/Apertus-8B-aligned_0.2_0.75_mix_no_refuse_sft_data_correct.yaml
+++ b/src/swiss_alignment/configs/dataset/Apertus-8B-aligned_0.2_0.75_mix_no_refuse_sft_data_correct.yaml
@@ -3,7 +3,7 @@
 dataset_name: Apertus-8B-aligned_0.2_0.75_mix_no_refuse_sft_data_correct
 
 dataset_args:
-  dataset_name: /iopsstor/scratch/cscs/bmessmer/SFT4Honesty/Apertus-8B-aligned_0.2_0.75_mix_no_refuse_sft_data_correct/ # /iopsstor/scratch/cscs/bmessmer/SFT4Honesty/german-sft4Honesty-2thresholds
+  dataset_name: /capstor/store/cscs/swissai/infra01/users/bmessmer/Apertus-8B-aligned_0.2_0.75_mix_no_refuse_sft_data_correct
   train_split: # Only required for DatasetDict objects
     name: null
   eval_split:
